fixing the home page, colors and spacing

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -19,7 +19,7 @@
     &:before {
       content: '<h1>';
       font-family: 'La Belle Aurore', cursive;
-      color: #ffd700;
+      color: skyblue;
       font-size: 18px;
       position: absolute;
       margin-top: -40px;
@@ -30,7 +30,7 @@
     &:after {
       content: '<h1/>';
       font-family: 'La Belle Aurore', cursive;
-      color: #ffd700;
+      color: skyblue;
       font-size: 18px;
       position: absolute;
       margin-top: 18px;
@@ -40,10 +40,11 @@
     }
 
     img {
-      margin-left: 20px;
+      margin-left: 10px;
+      margin-bottom: -5px;
       opacity: 0;
       width: 32px;
-      height: auto;
+      height: 50px;
       animation: rotateIn 1s linear both;
       animation-delay: 1.4s;
     }
@@ -60,21 +61,21 @@
   }
 
   .flat-button {
-    color: #ffd700;
+    color: skyblue;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 4px;
     font-family: sans-serif;
     text-decoration: none;
     padding: 10px 18px;
-    border: 1px solid #ffd700;
+    border: 1px solid skyblue;
     margin-top: 25px;
     float: left;
     animation: fadeInAnimation 1s 1.8s backwards;
     white-space: nowrap;
 
     &:hover {
-      background: #ffd700;
+      background: skyblue;
       color: #333;
     }
   }
