--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -46,7 +46,7 @@
       }
 
       &:hover {
-        color: #ffd700;
+        color: skyblue;
 
         svg {
           opacity: 0;
@@ -98,7 +98,7 @@
 
     a.active {
       svg {
-        color: #ffd700;
+        color: skyblue;
       }
     }
   }
@@ -122,7 +122,7 @@
         color: #4d4d4e;
 
         &:hover {
-          color: #ffd700;
+          color: skyblue;
         }
       }
     }
